<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/splash_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >    

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:layout_marginBottom="30dp"
        android:textSize="40sp"
	    android:gravity="center"
	    android:layout_gravity="top"
        android:text="@string/app_title"/>

   	<ImageView android:id="@+id/splash_logo"
   	    android:contentDescription="@string/app_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:layout_gravity="top"
        android:src="@drawable/splash_logo" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="30sp"
	    android:gravity="center"
	    android:layout_gravity="bottom"
	    android:typeface="sans"
        android:text="@string/tag_line"/>

</LinearLayout>