<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/story_card"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="horizontal" >    

		<View android:id="@+id/margin"
		    android:layout_width="20dp"
		    android:layout_height="match_parent"
		    android:background="@color/gray" />

    	<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="4dp"
		    android:layout_marginBottom="4dp"
		    android:layout_marginLeft="8dp"
		    android:layout_marginRight="8dp"
		    android:background="@drawable/card_shape"
		    android:orientation="vertical" >    
	
    	<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >    
		
		    <ImageView android:id="@+id/image"
		        android:src="@drawable/scanvine"
		        android:contentDescription="@string/image"
		        android:clickable="true"
		        android:layout_marginLeft="5dp"
		        android:layout_marginTop="5dp"
			    android:layout_width="50dp"
			    android:layout_height="50dp"/>
			
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
			    android:paddingLeft="8dp"
			    android:paddingRight="8dp"
			    android:orientation="vertical" >
		
			   	<TextView
			   	    android:id="@+id/title"
			   	    android:maxLines="4"
			   	    android:layout_width="wrap_content"
			   	    android:layout_height="wrap_content"
			   	    android:textSize="18sp" />
		
		    	<TextView
		    	    android:id="@+id/blurb"
			   	    android:maxLines="4"
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:textSize="15sp" />
		
		   	</LinearLayout>
		</LinearLayout>

		<View
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:layout_marginTop="5dp"
		    android:layout_marginLeft="5dp"
		    android:layout_marginRight="5dp"
		    android:layout_marginBottom="3dp"
		    android:background="@android:color/darker_gray" />

		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:paddingLeft="8dp"
		    android:paddingRight="3dp"
		    android:paddingBottom = "3dp"
		    android:orientation="horizontal" >    

		   	<TextView
		   	    android:id="@+id/byline"
		   	    android:maxLines="2"
		   	    android:layout_marginTop="6dp"
		   	    android:layout_width="wrap_content"
		   	    android:layout_height="wrap_content"
		   	    android:textSize="12sp" />

        	<View
	            android:layout_width="0dp"
	            android:layout_height="0dp"
	            android:layout_weight="1" />

        	<ImageButton android:id="@+id/download"
		        android:src="@drawable/download"
		        android:background="@color/white"
		        android:contentDescription="@string/download"
			    android:layout_width="44dp"
			    android:layout_height="30dp"/>
		    
		    <ImageButton android:id="@+id/share"
		        android:src="@drawable/share"
		        android:background="@color/white"
		        android:contentDescription="@string/share"
			    android:layout_width="44dp"
			    android:layout_height="30dp"/>
		    
		</LinearLayout>
		
	</LinearLayout>
</LinearLayout>